--- a/requirements.txt
+++ b/requirements.txt
@@ -1,71 +1,253 @@
-aiohttp==3.8.4
+absl-py==1.4.0
+aiohttp==3.8.3
+aioice==0.9.0
+aiortc==1.5.0
 aiosignal==1.3.1
 altair==4.2.2
+anyio==3.6.2
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+arrow==1.2.3
+asttokens==2.2.1
+astunparse==1.6.3
 async-timeout==4.0.2
-attrs==23.1.0
+asyncio==3.4.3
+attrs==22.2.0
+av==10.0.0
+backcall==0.2.0
 backoff==2.2.1
-backports.zoneinfo==0.2.1
+beautifulsoup4==4.11.1
+bleach==6.0.0
 blinker==1.6.2
 cachetools==5.3.0
+cattrs==22.2.0
 certifi==2022.12.7
+cffi==1.15.1
 chardet==3.0.4
-charset-normalizer==3.1.0
+charset-normalizer==2.1.1
+chess==1.9.4
 click==8.1.3
 cohere==4.3.0
+colorama==0.4.6
+comm==0.1.2
+contourpy==1.0.7
+cryptography==40.0.2
+cvzone==1.5.6
+cycler==0.11.0
+debugpy==1.6.5
 decorator==5.1.1
+defusedxml==0.7.1
+discord==2.1.0
+discord.py==2.1.1
+dnspython==2.3.0
+docstring-to-markdown==0.12
 entrypoints==0.4
+executing==1.2.0
+Faker==18.6.0
+fastjsonschema==2.16.3
+favicon==0.7.0
+filelock==3.9.0
+Flask==2.2.2
+Flask-Cors==3.0.10
+flatbuffers==23.3.3
+fonttools==4.39.0
+fqdn==1.5.1
 frozenlist==1.3.3
+gast==0.4.0
 gitdb==4.0.10
 GitPython==3.1.31
+google-auth==2.17.3
+google-auth-oauthlib==1.0.0
+google-crc32c==1.5.0
+google-pasta==0.2.0
 googletrans==4.0.0rc1
+grpcio==1.53.0
 h11==0.9.0
 h2==3.2.0
+h5py==3.8.0
 hpack==3.0.0
 hstspreload==2023.1.1
+htbuilder==0.6.1
 httpcore==0.9.1
 httpx==0.13.3
 hyperframe==5.2.0
 idna==2.10
+ifaddr==0.2.0
 importlib-metadata==6.6.0
-importlib-resources==5.12.0
+install==1.3.5
+ipykernel==6.20.2
+ipython==8.8.0
+ipython-genutils==0.2.0
+ipywidgets==8.0.6
+iso-639==0.4.5
 iso639==0.1.4
+isoduration==20.11.0
+itsdangerous==2.1.2
+jax==0.4.8
+jedi==0.18.2
+jedi-language-server==0.40.0
 Jinja2==3.1.2
+joblib==1.2.0
+jsonpointer==2.3
 jsonschema==4.17.3
+jupyter==1.0.0
+jupyter-console==6.6.3
+jupyter-events==0.6.3
+jupyter_client==7.4.9
+jupyter_core==5.1.3
+jupyter_server==2.5.0
+jupyter_server_terminals==0.4.4
+jupyterlab-pygments==0.2.2
+jupyterlab-widgets==3.0.7
+keras==2.12.0
+keyboard==0.13.5
+kiwisolver==1.4.4
+libclang==16.0.0
+lsprotocol==2023.0.0a1
+lxml==4.9.2
+Markdown==3.4.3
 markdown-it-py==2.2.0
+markdownlit==0.0.7
 MarkupSafe==2.1.2
+maskpass==0.3.7
+matplotlib==3.7.1
+matplotlib-inline==0.1.6
+mediapipe==0.9.3.0
 mdurl==0.1.2
+mistune==2.0.5
+ml-dtypes==0.1.0
+more-itertools==9.1.0
+MouseInfo==0.1.3
+mpmath==1.3.0
 multidict==6.0.4
-numpy==1.24.3
+mysql-connector-python==8.0.32
+nbclassic==0.5.5
+nbclient==0.7.3
+nbconvert==7.3.1
+nbformat==5.8.0
+nest-asyncio==1.5.6
+networkx==3.1
+notebook==6.5.4
+notebook_shim==0.2.2
+numpy==1.23.5
+oauthlib==3.2.2
 openai==0.27.5
-packaging==23.1
-pandas==2.0.1
-Pillow==9.5.0
-pkgutil_resolve_name==1.3.10
+opencv-contrib-python==4.7.0.72
+opencv-python==4.7.0.72
+opt-einsum==3.3.0
+packaging==23.0
+pandas==1.5.3
+pandocfilters==1.5.0
+parso==0.8.3
+pickleshare==0.7.5
+Pillow==9.4.0
+platformdirs==2.6.2
+plotly==5.14.1
+prometheus-client==0.16.0
+prompt-toolkit==3.0.36
 protobuf==3.20.3
+psutil==5.9.4
+pure-eval==0.2.2
 pyarrow==11.0.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+PyAutoGUI==0.9.53
+pycparser==2.21
+pydantic==1.10.6
 pydeck==0.8.1b0
-Pygments==2.15.1
+pyee==9.0.4
+pygame==2.1.3.dev8
+PyGetWindow==0.0.9
+pygls==1.0.1
+Pygments==2.14.0
+pylibsrtp==0.8.0
+pymdown-extensions==9.11
 Pympler==1.0.1
+PyMsgBox==1.0.9
+pynput==1.7.6
+pyOpenSSL==23.1.1
+pyparsing==3.0.9
+pyperclip==1.8.2
+pyreadr==0.4.7
+PyRect==0.2.0
 pyrsistent==0.19.3
+PyScreeze==0.1.28
+PySocks==1.7.1
 python-dateutil==2.8.2
-pytz==2023.3
+python-json-logger==2.0.7
+pytweening==1.0.4
+pytz==2022.7.1
 pytz-deprecation-shim==0.1.0.post0
-requests==2.29.0
+pywin32==305
+pywinpty==2.0.10
+PyYAML==6.0
+pyzmq==25.0.0
+qtconsole==5.4.2
+QtPy==2.3.1
+requests==2.28.2
+requests-oauthlib==1.3.1
+rfc3339-validator==0.1.4
 rfc3986==1.5.0
+rfc3986-validator==0.1.1
 rich==13.3.5
+rsa==4.9
+scikit-learn==1.2.2
+scipy==1.10.1
+seaborn==0.12.2
+Send2Trash==1.8.0
 six==1.16.0
 smmap==5.0.0
 sniffio==1.3.0
+snscrape==0.5.0.20230113
+soupsieve==2.3.2.post1
+st-annotated-text==4.0.0
+stack-data==0.6.2
 streamlit==1.22.0
+streamlit-camera-input-live==0.2.0
+streamlit-card==0.0.4
+streamlit-embedcode==0.1.2
+streamlit-extras==0.2.7
+streamlit-faker==0.0.2
+streamlit-image-coordinates==0.1.3
+streamlit-keyup==0.2.0
+streamlit-option-menu==0.3.2
+streamlit-toggle-switch==1.0.2
+streamlit-vertical-slider==1.0.2
+streamlit-webrtc==0.45.0
+sympy==1.11.1
 tenacity==8.2.2
+tensorboard==2.12.2
+tensorboard-data-server==0.7.0
+tensorboard-plugin-wit==1.8.1
+tensorflow==2.12.0
+tensorflow-estimator==2.12.0
+tensorflow-intel==2.12.0
+tensorflow-io-gcs-filesystem==0.31.0
+termcolor==2.2.0
+terminado==0.17.1
+threadpoolctl==3.1.0
+tinycss2==1.2.1
 toml==0.10.2
 toolz==0.12.0
-tornado==6.3.1
+torch==2.0.0
+tornado==6.2
 tqdm==4.65.0
-typing_extensions==4.5.0
+traitlets==5.8.1
+typeguard==2.13.3
+typing_extensions==4.4.0
 tzdata==2023.3
 tzlocal==4.3
-urllib3==1.26.15
+uri-template==1.2.0
+urllib3==1.26.14
+utils==1.0.1
 validators==0.20.0
-yarl==1.9.2
+watchdog==3.0.0
+wcwidth==0.2.6
+webcolors==1.13
+webencodings==0.5.1
+websocket-client==1.5.1
+Werkzeug==2.2.2
+widgetsnbextension==4.0.7
+wrapt==1.14.1
+yarl==1.8.2
 zipp==3.15.0
