--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,2 +1,6 @@
+[keys]
+COHERE_KEY = "s5Q29HXmwNQtus2QOnx7otqHp7PqhIyu9gTkqe9w"
+OPENAI_KEY = "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"
+
 [db]
 path = "./translation_log.db"
