--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ cohere==4.3.0
 cvzone==1.5.6
 googletrans==4.0.0rc1
 numpy==1.23.5
+mediapipe==0.9.3.0
 openai==0.27.5
 opencv-contrib-python==4.7.0.72
 opencv-python==4.7.0.72
