--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@ mediapipe==0.9.3.0
 openai==0.27.5
 opencv-contrib-python==4.7.0.72
 opencv-python==4.7.0.72
+opencv-python-headless==4.7.0.72
+opencv-contrib-python-headless==4.7.0.72
 pandas==1.5.3
 plotly==5.14.1
 requests==2.28.2
